--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
   </head>
 
   <body>
-    <h1>Open the Developer Tools to see the console output.</h1>
+    <h1>JS IN THE WILD</h1>
     <h3>
-      Either right click and select "Inspect" or use the shortcut Option + ⌘ + J
-      (on macOS), or Shift + CTRL + J (on Windows/Linux).
+      List of Photos
     </h3>
     <script src="code.js"></script>
   </body>
