--- a/index.html
+++ b/index.html
@@ -1,29 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
+    <!-- Required meta tags-->
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
 
-    <meta name="description" content="Kenzie" />
-    <meta name="author" content="Kenzie" />
-    <meta name="keywords" content="Kenzie" />
-
-    <!-- Title Page-->
-    <title>Kenzie JavaScript Page</title>
-
     <!-- CSS-->
     <link href="style.css" rel="stylesheet" media="all" />
   </head>
 
   <body>
-    <h1>JS IN THE WILD</h1>
-    <h3>
-      List of Photos
-    </h3>
+    <header>API Practice</header>
+    <section class="header">
+      <h2>
+        Car Photos
+      </h2>
+      <div class="instruct"> Press "Click" to start/ Press "Replay" after 5 image request </div>
+    </section>
     <script src="code.js"></script>
   </body>
 </html>
